reverted test inline style in index.html and fixed z-index of navbar

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -88,6 +88,7 @@ header{
 
 .headerMenu {
   position: fixed;
+  z-index: 99999999;
   right: 0;
   list-style-type: none;
   margin-right: 2rem;
